fixed a mis aligned text

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
     #contact{
         word-spacing: 0.5em;
     }
-    p{
+    #aboutText{
         margin-left: 10%;
         margin-right: 10%;
     }
@@ -26,12 +26,12 @@
         font-size: 46px;
         letter-spacing: 2px;
     }
-    p{
+    #aboutText{
         margin-left: 20%;
         margin-right: 20%;
     }
 }
-p{
+#aboutText{
     margin-left: 10%;
     margin-right: 10%;
 }
